Remove Core and Reactor dependencies