@@ -3,7 +3,6 @@
 
 package com.microsoft.typespec.http.client.generator.mgmt.transformer;
 
-import com.azure.core.util.CoreUtils;
 import com.microsoft.typespec.http.client.generator.core.extension.model.codemodel.ArraySchema;
 import com.microsoft.typespec.http.client.generator.core.extension.model.codemodel.CodeModel;
 import com.microsoft.typespec.http.client.generator.core.extension.model.codemodel.Language;
@@ -19,10 +18,9 @@ import com.microsoft.typespec.http.client.generator.core.extension.plugin.Plugin
 import com.microsoft.typespec.http.client.generator.mgmt.FluentNamer;
 import com.microsoft.typespec.http.client.generator.mgmt.model.FluentType;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
+import io.clientcore.core.utils.CoreUtils;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
@@ -52,9 +50,8 @@ public class ErrorTypeNormalization {
     }
 
     private static final Set<String> MANAGEMENT_ERROR_FIELDS
-        = new HashSet<>(Arrays.asList("code", "message", "target", "details", "additionalInfo"));
-    private static final Set<String> MANAGEMENT_ERROR_FIELDS_MIN_REQUIRED
-        = new HashSet<>(Arrays.asList("code", "message"));
+        = Set.of("code", "message", "target", "details", "additionalInfo");
+    private static final Set<String> MANAGEMENT_ERROR_FIELDS_MIN_REQUIRED = Set.of("code", "message");
 
     private static final ObjectSchema DUMMY_ERROR = dummyManagementError();
 
@@ -108,11 +105,8 @@ public class ErrorTypeNormalization {
                         .getAll()
                         .stream()
                         .filter(ErrorTypeNormalization::usedMoreThanException)
-                        .forEach(o -> {
-                            if (o instanceof ObjectSchema) {
-                                adaptForParentSchema((ObjectSchema) o, error);
-                            }
-                        });
+                        .filter(ObjectSchema.class::isInstance)
+                        .forEach(o -> adaptForParentSchema((ObjectSchema) o, error));
                 }
 
                 if (errorSchema != error && !updateChildrenParent) {
